--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,36 @@
+astroid==2.4.2
+atomicwrites==1.4.0
+attrs==20.2.0
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+colorama==0.4.3
+coverage==5.2.1
+docopt==0.6.2
 Flask==1.1.1
+idna==2.10
+iniconfig==1.0.1
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.11.2
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+more-itertools==8.5.0
+packaging==20.4
+pathtools==0.1.2
+pluggy==0.13.1
+py==1.9.0
+pylint==2.5.3
+pyparsing==2.4.7
+pytest==6.0.1
+pytest-testmon==1.0.3
+pytest-watch==4.2.0
 python-dotenv==0.12.0
+requests==2.24.0
+six==1.15.0
+toml==0.10.1
+urllib3==1.25.10
+watchdog==0.10.3
+Werkzeug==1.0.1
+wrapt==1.12.1
